Auto generate client v1.4.0
