# src/main/java/ai/cochl/sense/model/CreateSession.java
@@ -2,7 +2,7 @@
  * Cochl.Sense API
  * Cochl.Sense API allows to detect what is contained inside sound data. Send audio data over the internet to discover what it contains.  ``` npx @openapitools/openapi-generator-cli generate -i openapi.json -g python -o python-client ``` 
  *
- * The version of the OpenAPI document: v1.0.0
+ * The version of the OpenAPI document: v1.4.0
  * Contact: support@cochl.ai
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -16,6 +16,7 @@ package ai.cochl.sense.model;
 import java.util.Objects;
 import java.util.Arrays;
 import ai.cochl.sense.model.AudioType;
+import ai.cochl.sense.model.WindowHop;
 import com.google.gson.TypeAdapter;
 import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.annotations.SerializedName;
@@ -42,10 +43,6 @@ public class CreateSession {
   @SerializedName(SERIALIZED_NAME_TYPE)
   private AudioType type;
 
-  public static final String SERIALIZED_NAME_SERVICE = "service";
-  @SerializedName(SERIALIZED_NAME_SERVICE)
-  private String service;
-
   public static final String SERIALIZED_NAME_METADATAS = "metadatas";
   @SerializedName(SERIALIZED_NAME_METADATAS)
   private Map<String, String> metadatas = null;
@@ -53,6 +50,18 @@ public class CreateSession {
   public static final String SERIALIZED_NAME_TOTAL_SIZE = "total_size";
   @SerializedName(SERIALIZED_NAME_TOTAL_SIZE)
   private Integer totalSize;
+
+  public static final String SERIALIZED_NAME_TAGS_SENSITIVITY = "tags_sensitivity";
+  @SerializedName(SERIALIZED_NAME_TAGS_SENSITIVITY)
+  private Map<String, Integer> tagsSensitivity = null;
+
+  public static final String SERIALIZED_NAME_DEFAULT_SENSITIVITY = "default_sensitivity";
+  @SerializedName(SERIALIZED_NAME_DEFAULT_SENSITIVITY)
+  private Integer defaultSensitivity = 0;
+
+  public static final String SERIALIZED_NAME_WINDOW_HOP = "window_hop";
+  @SerializedName(SERIALIZED_NAME_WINDOW_HOP)
+  private WindowHop windowHop;
 
   public CreateSession() { 
   }
@@ -100,29 +109,6 @@ public class CreateSession {
 
   public void setType(AudioType type) {
     this.type = type;
-  }
-
-
-  public CreateSession service(String service) {
-    
-    this.service = service;
-    return this;
-  }
-
-   /**
-   * Type of audio service. Check [service documentation](https://docs.cochl.ai/todo) for an exaustive list of available services 
-   * @return service
-  **/
-  @javax.annotation.Nullable
-  @ApiModelProperty(value = "Type of audio service. Check [service documentation](https://docs.cochl.ai/todo) for an exaustive list of available services ")
-
-  public String getService() {
-    return service;
-  }
-
-
-  public void setService(String service) {
-    this.service = service;
   }
 
 
@@ -181,6 +167,85 @@ public class CreateSession {
   }
 
 
+  public CreateSession tagsSensitivity(Map<String, Integer> tagsSensitivity) {
+    
+    this.tagsSensitivity = tagsSensitivity;
+    return this;
+  }
+
+  public CreateSession putTagsSensitivityItem(String key, Integer tagsSensitivityItem) {
+    if (this.tagsSensitivity == null) {
+      this.tagsSensitivity = new HashMap<>();
+    }
+    this.tagsSensitivity.put(key, tagsSensitivityItem);
+    return this;
+  }
+
+   /**
+   * If set, it allows to adjust the sensitivity of a given tag [in this list](https://docs.cochl.ai/sense/tags/)  The sensitivity adjustment ranges in [-2,2]  A value of 0 preserves the default sensitivity  Positive value reduces tag appearance, negative value increases it 
+   * @return tagsSensitivity
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(example = "{\"Siren\":-2,\"Emergency_vehicle_siren\":-1}", value = "If set, it allows to adjust the sensitivity of a given tag [in this list](https://docs.cochl.ai/sense/tags/)  The sensitivity adjustment ranges in [-2,2]  A value of 0 preserves the default sensitivity  Positive value reduces tag appearance, negative value increases it ")
+
+  public Map<String, Integer> getTagsSensitivity() {
+    return tagsSensitivity;
+  }
+
+
+  public void setTagsSensitivity(Map<String, Integer> tagsSensitivity) {
+    this.tagsSensitivity = tagsSensitivity;
+  }
+
+
+  public CreateSession defaultSensitivity(Integer defaultSensitivity) {
+    
+    this.defaultSensitivity = defaultSensitivity;
+    return this;
+  }
+
+   /**
+   * If set, it allows to provide a default adjusted sensitivity for all tags  The sensitivity adjustment ranges in [-2,2]  0 is used if not set  Positive value reduces tag appearance, negative value increases it 
+   * minimum: -2
+   * maximum: 2
+   * @return defaultSensitivity
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(value = "If set, it allows to provide a default adjusted sensitivity for all tags  The sensitivity adjustment ranges in [-2,2]  0 is used if not set  Positive value reduces tag appearance, negative value increases it ")
+
+  public Integer getDefaultSensitivity() {
+    return defaultSensitivity;
+  }
+
+
+  public void setDefaultSensitivity(Integer defaultSensitivity) {
+    this.defaultSensitivity = defaultSensitivity;
+  }
+
+
+  public CreateSession windowHop(WindowHop windowHop) {
+    
+    this.windowHop = windowHop;
+    return this;
+  }
+
+   /**
+   * Get windowHop
+   * @return windowHop
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(value = "")
+
+  public WindowHop getWindowHop() {
+    return windowHop;
+  }
+
+
+  public void setWindowHop(WindowHop windowHop) {
+    this.windowHop = windowHop;
+  }
+
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -192,14 +257,16 @@ public class CreateSession {
     CreateSession createSession = (CreateSession) o;
     return Objects.equals(this.contentType, createSession.contentType) &&
         Objects.equals(this.type, createSession.type) &&
-        Objects.equals(this.service, createSession.service) &&
         Objects.equals(this.metadatas, createSession.metadatas) &&
-        Objects.equals(this.totalSize, createSession.totalSize);
+        Objects.equals(this.totalSize, createSession.totalSize) &&
+        Objects.equals(this.tagsSensitivity, createSession.tagsSensitivity) &&
+        Objects.equals(this.defaultSensitivity, createSession.defaultSensitivity) &&
+        Objects.equals(this.windowHop, createSession.windowHop);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(contentType, type, service, metadatas, totalSize);
+    return Objects.hash(contentType, type, metadatas, totalSize, tagsSensitivity, defaultSensitivity, windowHop);
   }
 
   @Override
@@ -208,9 +275,11 @@ public class CreateSession {
     sb.append("class CreateSession {\n");
     sb.append("    contentType: ").append(toIndentedString(contentType)).append("\n");
     sb.append("    type: ").append(toIndentedString(type)).append("\n");
-    sb.append("    service: ").append(toIndentedString(service)).append("\n");
     sb.append("    metadatas: ").append(toIndentedString(metadatas)).append("\n");
     sb.append("    totalSize: ").append(toIndentedString(totalSize)).append("\n");
+    sb.append("    tagsSensitivity: ").append(toIndentedString(tagsSensitivity)).append("\n");
+    sb.append("    defaultSensitivity: ").append(toIndentedString(defaultSensitivity)).append("\n");
+    sb.append("    windowHop: ").append(toIndentedString(windowHop)).append("\n");
     sb.append("}");
     return sb.toString();
   }
