# src/main/java/ai/cochl/sense/model/SenseEvent.java
@@ -2,7 +2,7 @@
  * Cochl.Sense API
  * Cochl.Sense API allows to detect what is contained inside sound data. Send audio data over the internet to discover what it contains.  ``` npx @openapitools/openapi-generator-cli generate -i openapi.json -g python -o python-client ``` 
  *
- * The version of the OpenAPI document: v1.0.0
+ * The version of the OpenAPI document: v1.4.0
  * Contact: support@cochl.ai
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -15,6 +15,7 @@ package ai.cochl.sense.model;
 
 import java.util.Objects;
 import java.util.Arrays;
+import ai.cochl.sense.model.SenseEventTag;
 import com.google.gson.TypeAdapter;
 import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.annotations.SerializedName;
@@ -23,6 +24,8 @@ import com.google.gson.stream.JsonWriter;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Contains data returned by the model 
@@ -30,9 +33,9 @@ import java.io.IOException;
 @ApiModel(description = "Contains data returned by the model ")
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
 public class SenseEvent {
-  public static final String SERIALIZED_NAME_PROBABILITY = "probability";
-  @SerializedName(SERIALIZED_NAME_PROBABILITY)
-  private Double probability;
+  public static final String SERIALIZED_NAME_TAGS = "tags";
+  @SerializedName(SERIALIZED_NAME_TAGS)
+  private List<SenseEventTag> tags = new ArrayList<>();
 
   public static final String SERIALIZED_NAME_START_TIME = "start_time";
   @SerializedName(SERIALIZED_NAME_START_TIME)
@@ -42,35 +45,34 @@ public class SenseEvent {
   @SerializedName(SERIALIZED_NAME_END_TIME)
   private Double endTime;
 
-  public static final String SERIALIZED_NAME_TAG = "tag";
-  @SerializedName(SERIALIZED_NAME_TAG)
-  private String tag;
-
   public SenseEvent() { 
   }
 
-  public SenseEvent probability(Double probability) {
+  public SenseEvent tags(List<SenseEventTag> tags) {
     
-    this.probability = probability;
+    this.tags = tags;
+    return this;
+  }
+
+  public SenseEvent addTagsItem(SenseEventTag tagsItem) {
+    this.tags.add(tagsItem);
     return this;
   }
 
    /**
-   * Probability that the event occurred. 0. means not possible at all and 1. means that it is certain 
-   * minimum: 0
-   * maximum: 1
-   * @return probability
+   * Contains results of what has been inferenced at the same time 
+   * @return tags
   **/
   @javax.annotation.Nonnull
-  @ApiModelProperty(required = true, value = "Probability that the event occurred. 0. means not possible at all and 1. means that it is certain ")
+  @ApiModelProperty(required = true, value = "Contains results of what has been inferenced at the same time ")
 
-  public Double getProbability() {
-    return probability;
+  public List<SenseEventTag> getTags() {
+    return tags;
   }
 
 
-  public void setProbability(Double probability) {
-    this.probability = probability;
+  public void setTags(List<SenseEventTag> tags) {
+    this.tags = tags;
   }
 
 
@@ -120,29 +122,6 @@ public class SenseEvent {
   }
 
 
-  public SenseEvent tag(String tag) {
-    
-    this.tag = tag;
-    return this;
-  }
-
-   /**
-   * Name of what was recognized during inference. 
-   * @return tag
-  **/
-  @javax.annotation.Nonnull
-  @ApiModelProperty(example = "Knock", required = true, value = "Name of what was recognized during inference. ")
-
-  public String getTag() {
-    return tag;
-  }
-
-
-  public void setTag(String tag) {
-    this.tag = tag;
-  }
-
-
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -152,25 +131,23 @@ public class SenseEvent {
       return false;
     }
     SenseEvent senseEvent = (SenseEvent) o;
-    return Objects.equals(this.probability, senseEvent.probability) &&
+    return Objects.equals(this.tags, senseEvent.tags) &&
         Objects.equals(this.startTime, senseEvent.startTime) &&
-        Objects.equals(this.endTime, senseEvent.endTime) &&
-        Objects.equals(this.tag, senseEvent.tag);
+        Objects.equals(this.endTime, senseEvent.endTime);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(probability, startTime, endTime, tag);
+    return Objects.hash(tags, startTime, endTime);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class SenseEvent {\n");
-    sb.append("    probability: ").append(toIndentedString(probability)).append("\n");
+    sb.append("    tags: ").append(toIndentedString(tags)).append("\n");
     sb.append("    startTime: ").append(toIndentedString(startTime)).append("\n");
     sb.append("    endTime: ").append(toIndentedString(endTime)).append("\n");
-    sb.append("    tag: ").append(toIndentedString(tag)).append("\n");
     sb.append("}");
     return sb.toString();
   }
