# src/main/java/ai/cochl/sense/model/WindowHop.java
@@ -25,18 +25,18 @@ import com.google.gson.stream.JsonReader;
 import com.google.gson.stream.JsonWriter;
 
 /**
- * Whether the audio that will be sent is a stream or a file 
+ * If set, it allows to adjust the sensitivity of a given tag [in this list]  The window hop adjustment can be set eith to 0.5s or 1s  By default, this value is set to 0.5s 
  */
-@JsonAdapter(AudioType.Adapter.class)
-public enum AudioType {
+@JsonAdapter(WindowHop.Adapter.class)
+public enum WindowHop {
   
-  STREAM("stream"),
+  _0_5S("0.5s"),
   
-  FILE("file");
+  _1S("1s");
 
   private String value;
 
-  AudioType(String value) {
+  WindowHop(String value) {
     this.value = value;
   }
 
@@ -49,8 +49,8 @@ public enum AudioType {
     return String.valueOf(value);
   }
 
-  public static AudioType fromValue(String value) {
-    for (AudioType b : AudioType.values()) {
+  public static WindowHop fromValue(String value) {
+    for (WindowHop b : WindowHop.values()) {
       if (b.value.equals(value)) {
         return b;
       }
@@ -58,16 +58,16 @@ public enum AudioType {
     throw new IllegalArgumentException("Unexpected value '" + value + "'");
   }
 
-  public static class Adapter extends TypeAdapter<AudioType> {
+  public static class Adapter extends TypeAdapter<WindowHop> {
     @Override
-    public void write(final JsonWriter jsonWriter, final AudioType enumeration) throws IOException {
+    public void write(final JsonWriter jsonWriter, final WindowHop enumeration) throws IOException {
       jsonWriter.value(enumeration.getValue());
     }
 
     @Override
-    public AudioType read(final JsonReader jsonReader) throws IOException {
+    public WindowHop read(final JsonReader jsonReader) throws IOException {
       String value = jsonReader.nextString();
-      return AudioType.fromValue(value);
+      return WindowHop.fromValue(value);
     }
   }
 }
